tests/error/comptime_expr_errors/guppy_name2.py
from tests.util import compile_guppy


x = 42


@compile_guppy
def foo(x: int) -> int:
    return comptime(x + 1)
